# ai-social-media-content-generator

./: .commitlintrc.json  .eslintignore  .eslintrc.json  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc  ARCH.md  BLOCKERS.md  DONE.md  PLAN.md  PRODUCT_BRIEF.md  PROGRESS.json  README.md  TODO.md  docker-compose.override.yml  docker-compose.yml  env.example  package-lock.json  package.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml
apps/api/: package.json  tsconfig.json
apps/api/src/: app.module.ts  main.ts
apps/frontend/: next.config.js  package.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/components/: BestTimeRecommendations.tsx  BillingDashboard.tsx  Calendar.tsx  ConnectorSetupModal.tsx  ConnectorStatusCheck.tsx  ExperimentsUI.tsx  HashtagSuggestions.tsx  Layout.tsx  MetricsDashboard.tsx  PlatformPreview.tsx  PublishPanel.tsx  RateLimitMonitor.tsx  RbacRouteGuard.tsx  ShareLinkManager.tsx  UTMBuilder.tsx  VariantTable.tsx
docker/nats/: nats.conf
docker/postgres/: dev-init.sql  init.sql  pgvector.sql  rls-policies.sql
docker/redis/: redis.conf
infra/: README.md
infra/cloudformation/: s3-buckets.yaml
infra/terraform/: main.tf  r2.tf  variables.tf
scripts/: seed-demo-data.ts
services/workers/buffer-connector/: pyproject.toml
services/workers/buffer-connector/app/: main.py
services/workers/report-worker/: pyproject.toml
services/workers/report-worker/app/: main.py
services/workers/voice-train-worker/: pyproject.toml
services/workers/voice-train-worker/app/: main.py
terraform/: main.tf  variables.tf
(+200 files in other folders)
